Add more info on the array list
1. Added news_main_list_item.xml
I want to show news title, news source and the date.
2.Added NewsItem.Java
It contains information related to a single news.
3.Add NewsAdapter.Java
//binding the data from the news Object to the views in earthquake_list_item.xml layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Primary color of the app (shown in the app bar) -->
     <color name="colorPrimary">#008577</color>
+
+     <!-- Primary dark color of the app (shown in the status bar) -->
     <color name="colorPrimaryDark">#00574B</color>
+
+    <!-- Accent color of the app -->
     <color name="colorAccent">#D81B60</color>
+
+    <!-- Text color for the news Title in the list item -->
+    <color name="textColorNewsTitleMainPage">#2B3D4D</color>
+
+    <!-- Text color for the date of the news in the list item -->
+    <color name="textColorNewsDateMainPage">#B4BAC0</color>
+
+    <!-- Text color for the publishing souce of the news in the list item -->
+    <color name="textColorNewsSouceMainPage">#2B3D4D</color>
+
 </resources>
